<resources>
    <string name="app_name">Animal Peek</string>
    <string name="camera">Camera</string>
    <string name="profile">Profile</string>
    <string name="daftar">Animals</string>
    <string name="home">Home</string>
    <string name="image_classifier_failed">Image classifier failed to initialize.</string>
    <string name="result">Classifier Result</string>
    <string name="image_desc">Image</string>
    <string name="analyze">Analyze</string>
    <string name="empty_image_warning">Empty Image</string>
    <string name="noavail">Empty History</string>
    <string name="label">Animal Names</string>
    <string name="score">Score</string>
    <string name="cari_hewan">search for animal</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="animal_name">Animal Name\n</string>
    <string name="animal_image">Animal Image\n</string>
    <string name="animal_detail_name">Name: %1$s</string>
    <string name="animal_detail_description">Description: %1$s</string>
    <string name="animal_detail_scientific_name">Scientific Name: %1$s</string>
    <string name="failed_to_retrieve_details">Failed to retrieve details.</string>
    <string name="error_fetching_details">Error fetching details.</string>
    <string name="settings">Settings</string>
    <string name="play_sound">Play sound\n</string>
    <string name="image_description">Animal Image\n</string>
    <string name="splash_logo">splash logo\n</string>
    <string name="logout">logout</string>
    <string name="hello_user">Hello, User!</string>
    <string name="plustext">Lets start exploring</string>
    <string name="mulai">Start</string>
    <string name="welcome">Welcome</string>
    <string name="extra">Lets start exploring animals here</string>
    <string name="username">What is your name?</string>
    <string name="age">How old are you?</string>
    <string name="register">Lets Start</string>
    <string name="profile_image">Profile Image</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="enter_new_age">Enter new age</string>
    <string name="old_username">Old Username:</string>
    <string name="old_age">Old Age:</string>
    <string name="save">Save</string>
    <string name="profilename">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="animal_description">Animal Description</string>
    <string name="alert">Sorry, we havent been able to detect this animal. Lets try another animal</string>
    <string name="no_classification_result">No classification result</string>

    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>

    <string name="failed_to_start_camera">Failed to start camera</string>
    <string name="failed_to_capture_image">Failed to capture image</string>
    <string name="image_cropped_successfully">Image cropped successfully</string>
    <string name="failed_to_crop_image">Failed to crop image</string>
    <string name="no_classification_results_found">No classification results found.</string>
    <string name="classification_saved_to_database">Classification saved to database</string>
    <string name="error_starting_image_analysis">Error starting image analysis</string>
    <string name="error">Error</string>
    <string name="uknown_animal">Animal name not found</string>
    <string name="terjadi_kesalahan">Error</string>
    <string name="jawaban_benar">Correct answer!</string>
    <string name="jawaban_salah_coba_lagi">Wrong answer. Try again!</string>
    <string name="memutar_suara_hewan">Play animal sounds...</string>
    <string name="suara_selesai_diputar">The sound finishes playing.</string>
    <string name="hewan_tidak_ditemukan">Animals Not Found</string>
    <string name="tidak_ditemukan">Animal with name \"%1$s\" not found. Please try another name.</string>
    <string name="update_failed">Update failed</string>
    <string name="helloUser">Hello, User</string>

    <string name="pengaturan">Settings</string>
    <string name="bahasa">Language</string>
    <string name="profil">Profile</string>
    <string name="masukkan_nama">Enter the name of the animal to search</string>
    <string name="no_classification_found">No Classification Found</string>
    <string name="the_image_did_not_yield_any_classifications">The image did not yield any classifications.</string>

    <string name="no_valid_classification_result">No valid classification result.</string>
    <string name="username_is_required">Username is required</string>
    <string name="valid_age_is_required">Valid age is required</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="registration_failed">Registration Failed</string>

</resources>