<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/gradient_background">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/baseline_person_24"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/profile_image"
        android:elevation="4dp"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonPickImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="mini"
        android:src="@drawable/baseline_add_a_photo_24"
        android:contentDescription="@string/select_profile_picture"
        android:layout_alignTop="@id/profileImage"
        android:layout_alignEnd="@id/profileImage"
        android:layout_marginTop="150dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_username"
        android:textSize="16sp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:layout_below="@id/profileImage"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_age"
        android:textSize="16sp"
        android:background="@drawable/edittext_background"
        android:inputType="numberSigned"
        android:padding="12dp"
        android:layout_below="@id/editTextName"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/textViewOldUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_username"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/editTextAge"
        android:layout_marginBottom="12dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textViewOldAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_age"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/textViewOldUsername"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:background="@drawable/gradient_button"
        android:layout_below="@id/textViewOldAge"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" />
</RelativeLayout>
