<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    android:padding="16dp">

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/animal_image"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_image"
        android:clipToOutline="true" />

    <TextView
        android:id="@+id/noClassificationResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_classification_result"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginTop="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="8dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/resultDetailsSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/alert"
                android:background="@drawable/rounded_bg"
                android:padding="8dp" />
        </FrameLayout>
    </ScrollView>

    <Button
        android:id="@+id/playSoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/play_sound"
        android:visibility="gone"
        android:layout_marginTop="16dp" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:layout_marginTop="16dp" />

</LinearLayout>
