<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.list.AnimalListActivity">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/rounded_bottom_background"
        android:orientation="vertical"
        android:elevation="4dp"
        android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/AppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/slackeyregular"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:gravity="start"
            android:layout_marginStart="16dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginBottom="8dp">

            <ImageButton
                android:id="@+id/action_logout"
                android:layout_width="38dp"
                android:layout_height="34dp"
                android:src="@drawable/baseline_logout_24"
                android:contentDescription="@string/logout"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_marginEnd="8dp"/>

            <ImageButton
                android:id="@+id/settingImageView"
                android:layout_width="38dp"
                android:layout_height="34dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/settings"
                android:src="@drawable/baseline_settings_24" />
        </LinearLayout>
    </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cari_hewan"
                android:imeOptions="actionSearch"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/headerLayout"
        android:layout_above="@id/bottomNav"
        android:paddingTop="25dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/slackeyregular"
            android:text="@string/hello_user"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <TextView
            android:id="@+id/plusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/slackeyregular"
            android:text="@string/plustext"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameTextView"
            app:layout_constraintHorizontal_bias="0.5" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_view"
            android:layout_width="279dp"
            android:layout_height="298dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/panda" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_nav_gradient"
        android:elevation="8dp"
        app:menu="@menu/menu"
        app:labelVisibilityMode="labeled" />
</RelativeLayout>
